packages/svelte/tests/validator/samples/class-state-constructor-10/input.svelte.js
export class Counter {
	constructor() {
		if (true) {
			this.count = -1;
		}

		this.count = $state(0);
	}
}
