packages/svelte/tests/compiler-errors/samples/invalid-rune-name-shadowed/main.svelte.js
class State {
	value = $state.foo();
}

export const state = new State();
